# nightward

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
.nightward/baseline/: checkout_total.approved.json  user_login.approved.json
docs/: RELEASING.md
docs/experiments/: 2026-06-10-document-input-adapters.md  2026-06-10-web-data-gate-validation.md
docs/recipes/: ci-github-actions.md
docs/superpowers/plans/: 2026-06-07-nightward-mcp-agent-gate.md
docs/superpowers/specs/: 2026-06-05-nightward-view-dashboard-design.md  2026-06-07-nightward-mcp-agent-gate-design.md  2026-06-10-nightward-llm-judge-semantic-diff-design.md
example/: app.py  test_app.py
examples/inbox/: aggregate.py  emails.py  test_inbox.py
examples/inbox/.nightward/baseline/: attachments_summary.approved.json  by_domain.approved.json  by_label.approved.json  by_sender.approved.json  by_weekday.approved.json  inbox_summary.approved.json  (+1 more)
examples/newsroom/: README.md  newsroom.py  test_newsroom.py
examples/petshop/: .gitignore  README.md  shop.py  test_shop.py
scripts/: build_demo.py  build_gif.py  remote-setup.sh
src/nightward/: __init__.py  adapters.py  cli.py  errors.py  judge.py  mcp_server.py  pytest_plugin.py  runner.py  scrub.py  signal.py
src/nightward/core/: baseline.py  behavior.py  blast.py  diff.py  doctor.py
src/nightward/view/: __init__.py  serve.py
tests/: conftest.py  test_adapters.py  test_core.py  test_doctor.py  test_hardening.py  test_integration.py  test_judge.py  test_mcp.py  test_personas.py  test_runner.py  test_scrub.py  test_store.py  test_view.py
(+9 files in other folders)
