[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nightward"
version = "0.2.0"
description = "Regression firewall for AI-driven changes — capture, approve, and gate behavior boundaries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["testing", "approval-testing", "regression", "ai", "agents", "snapshot", "ci", "qa"]
authors = [{ name = "nightward authors" }]
dependencies = ["pytest>=7", "typer>=0.9", "rich>=13"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/LunenLabs/nightward"
Issues = "https://github.com/LunenLabs/nightward/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mcp>=1.0", "pypdf>=4", "python-docx>=1", "openpyxl>=3.1"]
mcp = ["mcp>=1.0"]
judge = ["anthropic>=0.40"]
docs = ["pypdf>=4", "python-docx>=1", "openpyxl>=3.1"]

[project.scripts]
nightward = "nightward.cli:app"

[project.entry-points.pytest11]
nightward = "nightward.pytest_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nightward.view" = ["assets/*.html", "assets/*.js", "assets/*.css"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
